fix: update release workflow to include setuptools_scm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "iita_python"
 description = "IITA algorithm in python"
+requires-python = ">=3.9"
 readme = "README.md"
 authors = [
     {name = "Aliaksei Badnarchuk", email = "alexejbodnarchuk@gmail.com"}
