fix: explicitly set dynamic versioning in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "numpy",
     "pandas"
 ]
+dynamic = ["version"]
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
 local_scheme = "no-local-version"
+version_file = "iita_python/_version.py"
