--- a/setuf.cfg
+++ b/setuf.cfg
@@ -5,7 +5,7 @@ author_email = alexejbodnarchuk@gmail.com
 description = IITA algorithm in python
 
 [options]
-packages = find:
+packages = iita_python
 python_requires = >=3.9
 install_requires =
     numpy
